# playground

./: .env  .gitignore  .tool-versions  README.md  package-lock.json
.circleci/: config.yml  continue_config.yml  go.yml  setup.yml
.github/workflows/: artifact-attestations.yaml  ci-for-kubernetes.yaml  ci-for-nuxt3-quickstart.yaml  codebuild-runner.yaml  concurrency-job.yaml  concurrency-job2.yaml  concurrency-job3.yaml  concurrency-workflow.yaml  dependency-review.yaml  deploy-wrangler.yaml  dynamic-workflow-run-name.yaml  earthly-go-ci.yaml  main.yml  oidc-for-aws.yaml  repo-visualizer.yaml  required-status-check-and-job-skip.yaml  required-status-check-backend.yaml  required-status-check-frontend.yaml  required-status-check-renovate.yaml  reusable-workflow-a.yaml  reusable-workflow-b.yaml  reusable-workflow-c.yaml  reusable-workflow-d.yaml  scorecards-analysis.yml  setup-go.yaml  setup-java.yaml  setup-node.yaml  step-summary-details.yaml  stryker-dashboard.yaml  trigger-with-github-token.yaml  use-local-action.yaml  using-local-action.yaml  variables.yaml  workflow_dispatch_many.yaml
aws/ecs_exec/: .tool-versions  Ecs.yaml  create.sh  delete.sh  deploy.sh  update.sh
aws/iam_roles_anywhere_with_vault/: .gitignore  README.md  aws_config  awscli.sh  setup_aws.sh  (+1 more)
deno/: deno.json
earthly/: README.md
frontend/: package-lock.json  package.json
python/: .gitignore
python/diagrams/example/: main.py  pyproject.toml
rust/: .gitignore
stepci/: README.md  sample.proto
terraform/: .gitignore
zx/: README.md  checkDirtyWorkingTreeForGit.mjs  helloWorld.mjs
(+189 files in other folders)
