[tool.poetry]
name = "aws_iam_roles_anyware"
version = "0.0.0"
description = ""
authors = ["Futa HIRAKOBA <korosuke613613@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
diagrams = "^0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
